GNOME Bugzilla – Bug 695116
gnome-bg: fix mem leak
Last modified: 2013-05-13 15:16:54 UTC
Created attachment 237954 [details] [review] gnome-bg: fix mem leak patch attached
Review of attachment 237954 [details] [review]: ::: libgnome-desktop/gnome-bg-slide-show.c @@ +736,2 @@ loaded = g_file_load_contents_finish (file, result, &contents, &length, NULL, &error); + g_object_unref (file); The file should be unreferenced as soon as g_file_load_contents_async() is called, as the function will hold a reference to it until the callback has finished.
Created attachment 239762 [details] [review] gnome-bg: fix mem leak v2 >The file should be unreferenced as soon as g_file_load_contents_async() is called Done.
Review of attachment 239762 [details] [review]: Looks good. We'll get it in GNOME 3.8.1 and master after the freeze (the leak isn't big enough to ask for a freeze break).
Ping. Please commit.