gnome-bg: Fix memleak

https://bugzilla.gnome.org/show_bug.cgi?id=695116